welcome.lessons.welcome.instructions.Instructions.scala.error
Program:2: error: identifier expected but '.' found.
(1 .. 3) forward()
    ^Program:2: error: identifier expected but integer literal found.
(1 .. 3) forward()
      ^