welcome.lessons.welcome.instructions.Instructions.scala.code
(1 .. 3) forward()
